# telegram-filesystem

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yaml
.devcontainer/: devcontainer.json
src/: CMakeLists.txt  main.cpp
src/application/: CMakeLists.txt  MockDirectory.h  MockFile.h  MockFileSystemEntity.h  MockFileSystemService.h  TelegramFileSystemService.cpp  TelegramFileSystemService.h
src/application/abstractions/: ITelegramIntegration.h
src/application/contracts/: IFileSystemService.h
src/application/models/: Chat.h  Directory.h  File.h  FileSystemEntity.h  Message.h
src/infrastructure/: CMakeLists.txt  Query.h  TelegramIntegration.cpp  TelegramIntegration.h  telegram-integration.cpp  telegram-integration.h
src/presentation/: CMakeLists.txt  FuseOperations.h
